style.css
/* ... */
.nav-links-mobile {
  width: 100%;
  height: 100%;
}

.nav-links-mobile ul {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  list-style-type: none;
}

.nav-links-mobile ul li {
  height: 3rem;
  width: 7rem;
  border-radius: 25px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.nav-links-mobile ul li a {
  text-decoration: none;
  font-size: 1.25rem;
}

.contact-mobile {
  background-color: yellow;
}

#services {
  width: 100%;
}

.egg-picture {
  height: 40vh;
  background: url(/Sunnyside-Agency/images/mobile/image-transform.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.transform-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 50vh;
  background: #fffbf8;
}

.transform-header {
  padding: 0px 20px;
  font-size: 2rem;
  text-align: center;
  padding-bottom: 20px;
}

.transform-main-text {
  text-align: center;
  font-size: 1.25rem;
  padding: 0px 20px;
  padding-bottom: 20px;
}

.learn-more {
  text-decoration: none;
  color: black;
  font-size: 1rem;
}

.pink-cup {
  width: 100%;
  height: 40vh;
  background: url(/Sunnyside-Agency/images/mobile/image-stand-out.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.stand-out-text {
  width: 100%;
  height: 50vh;
  background: #fffbf8;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.stand-out-header {
  font-size: 2rem;
  text-align: center;
  padding-bottom: 20px;
  padding-left: 20px;
  padding-right: 20px;
}

.stand-out-main-text {
  font-size: 1.25rem;
  text-align: center;
  padding: 0px 20px;
  padding-bottom: 20px;
}

/* // skills section // */

.graphic-design {
  width: 100%;
  height: 90vh;
  background: url(/Sunnyside-Agency/images/mobile/image-graphic-design.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  display: flex;
  align-items: flex-end;
}

.graphic-design-text-container {
  width: 100%;
  height: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.graphic-design-header {
  font-size: 1.75rem;
}

.graphic-design-main-text {
  padding-top: 20px;
  font-size: 1.25rem;
  text-align: center;
}

.photography {
  width: 100%;
  height: 90vh;
  background: url(/Sunnyside-Agency/images/mobile/image-photography.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  display: flex;
  align-items: flex-end;
}

.photography-text-container {
  width: 100%;
  height: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.photography-header {
  font-size: 1.75rem;
}

.photography-main-text {
  padding-top: 20px;
  font-size: 1.25rem;
  text-align: center;
}

/* // small devices (landscape phones) // */
@media (min-width: 567.98px) {
  .picture-of-orange {
    height: 100vh;
    background-position: 25% 65%;
  }

  .nav-area {
    height: 25%;
  }

  .sunnyside-header {
    margin-left: 50px;
  }

  .button-area {
    margin-right: 50px;
  }

  .hamburger-menu-button {
    width: 2rem;
    height: 1.25rem;
    background: none;
    border: none;
  }

  .egg-picture {
    height: 100vh;
  }

  .transform-text {
    height: 100vh;
  }

  .pink-cup {
    height: 100vh;
  }

  .stand-out-text {
    height: 100vh;
  }

  .graphic-design {
    height: 100vh;
  }
  .photography {
    height: 100vh;
  }
}

/* // medium devices (tablets) // */
@media (min-width: 767.98px) {
  .picture-of-orange {
    height: 60vh;
  }

  .sunnyside-header {
    font-size: 2rem;
  }

  .hamburger-menu-button {
    width: 2.5rem;
    height: 1.5rem;
  }

  .creatives-text {
    font-size: 3.5rem;
    letter-spacing: 1.5rem;
  }

  .sunnyside-header {
    font-size: 1.25rem;
  }

  .nav-links-mobile ul li {
    height: 4rem;
    width: 9rem;
  }

  .nav-links-mobile ul li a {
    font-size: 1.75rem;
  }

  .egg-picture {
    height: 50vh;
  }

  .transform-text {
    height: 50vh;
  }

  .transform-header {
    font-size: 3rem;
  }

  .transform-main-text {
    font-size: 1.75rem;
    padding: 30px 10%;
    /* padding-bottom: 30px; */
  }

  .learn-more {
    font-size: 1.5rem;
  }
  .pink-cup {
    height: 40vh;
  }

  .stand-out-text {
    height: 50vh;
  }

  .stand-out-header {
    font-size: 3rem;
  }

  .stand-out-main-text {
    font-size: 1.75rem;
    padding: 30px 5%;
    padding-bottom: 30px;
  }

  .graphic-design-header {
    font-size: 3rem;
    padding-bottom: 20px;
  }

  .graphic-design-main-text {
    font-size: 1.75rem;
    padding: 0 10%;
  }

  .photography-header {
    font-size: 3rem;
    padding-bottom: 20px;
  }

  .photography-main-text {
    font-size: 1.75rem;
    padding: 0 10%;
  }
}
/* ... */

